workspace = { members = ["scripts/celsius-to-fahrenheit", "scripts/fahrenheit-to-celsius", "scripts/pinger", "scripts/valid-anagram"] }
[package]
name = "oc-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5"
bollard = "0.15"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
termion = "3.0"
